--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
     "name": "@trendybeat/metacheck",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "Utilities for music metadata management, by Trendy Beat Network.",
     "main": "index.js",
-    "keywords": ["trendybeat", "music", "metadata", "ISRC", "utilities"],
+    "keywords": [
+        "trendybeat",
+        "music",
+        "metadata",
+        "ISRC",
+        "utilities"
+    ],
     "author": "Trendy Beat Network LTD <support@trendybeat.com>",
     "license": "MIT",
     "repository": {
